Enviando o código html

--- a/about.html
+++ b/about.html
@@ -1,3 +1,7 @@
 Teste atualização do arquivo about.
 
 <h1> Olá, este arquivo é do git hub</h1>
+
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, ad perferendis. Natus dolor quidem sapiente fuga quisquam nulla! Explicabo atque facere accusamus perspiciatis deleniti optio hic distinctio, mollitia ipsam natus.
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. A repellat, autem distinctio quasi commodi culpa veritatis reprehenderit laborum vitae hic dolorum voluptate adipisci, laboriosam voluptatibus quis harum tenetur? Ipsam, assumenda?
