Subindo novos arquivos

--- a/about.html
+++ b/about.html
@@ -5,3 +5,5 @@ Teste atualização do arquivo about.
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, ad perferendis. Natus dolor quidem sapiente fuga quisquam nulla! Explicabo atque facere accusamus perspiciatis deleniti optio hic distinctio, mollitia ipsam natus.
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. A repellat, autem distinctio quasi commodi culpa veritatis reprehenderit laborum vitae hic dolorum voluptate adipisci, laboriosam voluptatibus quis harum tenetur? Ipsam, assumenda?
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi et ipsum, illum eos, beatae saepe molestiae nam praesentium in autem mollitia explicabo quod tempora veritatis, blanditiis quae obcaecati dolor!
