Subindo um novo lorem para preencher o campo de texto da home

--- a/pagina_Home.html
+++ b/pagina_Home.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1> Você está em nossa HOME</h1>
-    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nemo id, ullam delectus harum quos illum vitae unde hic rem esse sit, ratione incidunt minima iure autem, voluptatibus porro odio.</p>
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nemo id, ullam delectus harum quos illum vitae unde hic rem esse sit, ratione incidunt minima iure autem, voluptatibus porro odio.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro at ipsum minima quasi? Dolorum, esse fugiat ullam architecto consequuntur magni earum asperiores odit eos quae laborum quaerat voluptas hic. Dicta.
+    </p>
 </body>
 </html>
